--- a/style.css
+++ b/style.css
@@ -10,28 +10,47 @@ body
 	font-size: 14px;	
 	display: flex;
 	flex-flow: row wrap;
-
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
 	background: #000;
 }
-.swiper-container {
-	width: 100%;
-	padding-top: 50px;
-	padding-bottom: 150px;
+.swiper-container 
+{
+	width: 100%;	
+	padding-bottom: 10em;
 }
-.swiper-slide {
+.swiper-slide 
+{
 	background-position: center;
 	background-size: cover;
 	width: 350px;
 	height: 250px;
-	background: : #000;
+	text-align: center;
 	-webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0006);
 }
+.swiper-slide p
+{
+	font-size: 1.5em;
+	color: #fff;
+	background-color: gray;	
+}
+
 #div-Typed
 {
 	style="font-family: 'Permanent Marker' cursive;
 	text-align: center; 
-	color: #fff
+	color: #fff;
+	font-size: 1.5em;
+}
+
+@media (max-width: 1000px) {
+	.swiper-slide p
+	{
+		font-size: 1em;
+	}
+	#div-Typed 		
+	{		
+		font-size: 3em;
+	}		
 }
